--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,6 +14,33 @@
 .logo-container svg {
   width: 100%;
   height: 100%;
-  viewBox: 0 0 100 100;  /* Adjust these values to match your SVG's original viewBox */
-  preserveAspectRatio: xMidYMid meet;
+}
+
+/* Custom theme */
+.stApp {
+  background-color: #ffffff;  /* Light gray background for the entire app */
+}
+
+.sidebar .sidebar-content {
+  background-color: #e0e0e0;  /* Slightly darker gray for the sidebar */
+}
+
+body {
+  color: #333333;  /* Dark gray text color */
+}
+
+/* Custom styling for headers */
+h1, h2, h3 {
+  color: #0018A8;  /* Deutsche Bank blue for headers */
+}
+
+/* Custom styling for the plotly chart */
+.js-plotly-plot {
+  background-color: #ffffff;  /* White background for the chart */
+}
+
+.mission-statement {
+  font-size: 0.8em;  /* Adjust this value to make the text smaller or larger */
+  line-height: 1.4;  /* Adjust line height for better readability */
+  color: #555;  /* Slightly lighter color for less emphasis */
 }
